# memory-mcp

./: .git-town.toml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.ci  README.md  ROADMAP.md  TODO.md  cliff.toml  clippy.toml  deny.toml  dist-workspace.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: build.yml  lint-pr.yml  publish-crate.yml  publish-image.yml  release.yml  tag-release.yml  update-release-notes.yml
.serena/: project.yml
.serena/memories/: deployment_target.md  operational_concerns.md  project_overview.md  session_handoff.md  suggested_commands.md  task_completion_checklist.md
crates/mcp-session/: Cargo.toml  README.md
crates/mcp-session/src/: lib.rs
docs/: README.md  ROADMAP.md  architecture.md  clients.md  configuration.md  deployment.md  getting-started.md  security.md  tools.md
docs/adr/: 0001-streamable-http-only.md  0002-git2-over-shell.md  0003-usearch-vector-index.md  0004-no-tokens-in-cli-args.md  0005-fastembed-configurable-from-start.md  0010-keyring-based-token-storage.md  0011-cli-subcommand-structure.md  0012-oauth-device-flow-token-acquisition.md  0014-container-deployment-strategy.md  0017-msrv-match-deps.md  0018-dedicated-github-app-for-release-please.md  0019-serde-non-exhaustive-strategy.md  0020-bounded-session-management.md  0021-scope-affinity-defaults.md  0023-supply-chain-tls-and-vendoring.md  0024-oauth-device-flow-provider-trait.md  0025-vectorstore-two-level-dispatch.md  0026-channel-worker-embedding-engine.md  0027-passive-health-reporting.md  0028-schema-driven-metadata-model.md  0029-scope-as-namespace.md  0030-memory-serializer-trait.md  0031-retention-metadata.md  0032-user-defined-classification.md  0033-newtype-validation-at-construction.md  0034-sqlite-recall-event-log.md  0035-recall-feedback-loop.md  0036-in-process-tower-tests.md  0037-move-tool-atomicity.md  0038-bm25-hybrid-retrieval.md  0038-per-scope-remote-mapping.md  0039-lexical-index-failure-repair-contract.md  0039-startup-lifecycle-state-machine.md  0040-exhaustive-public-enums.md  0040-stdio-transport-single-writer-lock.md  0041-per-scope-remote-mapping.md  0042-chunk-addressable-retrieval-contract.md
docs/design/: README.md
docs/review-notes/: 2026-03-18-ci-workflow-review.md
patches/ort-candle/: Cargo.toml  api.rs
src/: auth.rs  chunker.rs  chunker_tests.rs  config.rs  embedding.rs  error.rs  fs_util.rs  health.rs  index.rs  lib.rs  main.rs  recall_log.rs  repo.rs  repo_router.rs  server.rs  session.rs  test_log.rs  types.rs
src/auth/: mod.rs
src/embedding/: candle.rs  mod.rs  (+1 more)
tests/: allowed_hosts.rs  auth.rs  auth_testing_feature.rs  candle_backend.rs  candle_embedding.rs  hybrid_recall.rs  native_certs.rs  otlp_startup.rs  readyz.rs  repo_round_trip.rs  scope_filter_integration.rs  session_limits.rs  stdio_transport.rs  tracing.rs
(+39 files in other folders)
